syntax = "proto3";

package auth;

option go_package = "tp.auth.v1.;authv1";

service Auth{
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc RegisterConfirm(RegisterConfirmRequest) returns (RegisterConfirmResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc IsTokenValid(IsTokenValidRequest) returns (IsTokenValidResponse);

  rpc LinkGithubAccount(LinkGithubRequest) returns (LinkGithubResponse);
  rpc UnlinkGithubAccount(UnlinkGithubRequest) returns (UnlinkGithubResponse);
}

message RegisterRequest{
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse{
  int64 userID = 1; // request to confirm email address
}

message RegisterConfirmRequest{
  string email = 1;
  string otp = 2;
}

message RegisterConfirmResponse{
  bool success = 1;
  string message = 2;
}

message LoginRequest{
  string email = 1;
  string password = 2;
}

message LoginResponse{
  string token = 1;
}

message IsTokenValidRequest{
  string token = 1;
}

message IsTokenValidResponse{
  bool isTokenValid = 1;
}

////////////////////////////////   Github OAuth   ////////////////////////////////

message LinkGithubRequest{
  string github_code = 1;
}

message LinkGithubResponse {
  bool success = 1;
  string message = 2;
}

message UnlinkGithubRequest {
}

message UnlinkGithubResponse {
  bool success = 1;
}